# nodesales-hub

./: .gitignore  Dockerfile  PRIVACY.md  README.md  deploy-local.js  deploy-testnet.js  hardhat.config.cjs  hardhat.config.ts  package-lock.json  package.json  post-setup.js  tsconfig.json
.claude/: settings.local.json
aeveum-web-kortana/: package-lock.json  package.json  tailwind.config.ts
bellomundo-kortana/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
contracts/: KortanaMonoDEX.sol
frontend/: package-lock.json  package.json
kortana-crown/: .env.example  .gitignore  .solhint.json  hardhat.config.js  package-lock.json  package.json
kortana-dex/: compile_log.txt  deploy_log.txt  hardhat.config.js  hash.txt  package-lock.json  package.json
kortana-dnrs/: .env.example  .gitignore  DNRS_Stablecoin_Prompt_v2.md  README.md  (+10 more)
kortana-mainnet/: .gitignore  Cargo.toml  README.md  errors.txt  install.sh  wallet.txt
kortana-mainnet/data/kortana.db/: db
kortana-mainnet/examples/: security_verify.rs  send_treasury.rs
kortana-mainnet/scripts/: deploy_ubuntu.sh
kortana-mainnet/src/: check_validators.rs  main.rs  parameters.rs
kortana-mainnet/src/consensus/: mod.rs
kortana-mainnet/src/core/: fees.rs  genesis.rs  processor.rs
kortana-mainnet/src/crypto/: mod.rs
kortana-mainnet/src/network/: p2p.rs
kortana-mainnet/src/rpc/: mod.rs
kortana-mainnet/src/state/: account.rs
kortana-mainnet/src/storage/: mod.rs
kortana-mainnet/src/types/: block.rs
kortana-mainnet/src/vm/: evm.rs
kortana-mainnet/tests/: e2e_test.rs
(+923 files in other folders)
