[package]
name = "kortana-blockchain-rust"
version = "1.1.0"
edition = "2021"

[dependencies]
bls12_381 = "0.8.0"
hex = "0.4.3"
k256 = "0.13.4"
libp2p = { version = "0.56.0", features = ["tcp", "dns", "noise", "yamux", "gossipsub", "kad", "mdns", "tokio", "macros"] }
rand = "0.8.5"
rlp = "0.6.1"
rlp-derive = "0.2.0"
sled = "0.34.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.8"
sha3 = "0.10.8"
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
clap = { version = "4.5", features = ["derive"] }
dotenv = "0.15"
anyhow = "1.0"
thiserror = "1.0"
ethnum = "1.5.0"

[dev-dependencies]
tempfile = "3.10"
